# gawaipos-admin

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
employies/: admin.py  apps.py  models.py
employies/migrations/: 0001_initial.py  0002_department.py  0003_staff_departement.py
gawaipos/: .env  .env.example  asgi.py  settings.py  urls.py  wsgi.py
inventory/: admin.py  models.py
inventory/migrations/: 0001_initial.py  0002_stockonhand_updated_at.py  0003_stockonhand_merchant_id.py  0004_rename_merchant_id_stockonhand_merchant.py
locations/: admin.py  models.py
locations/migrations/: 0001_initial.py
master/: admin.py  apps.py  choices.py  models.py  views.py
master/migrations/: 0001_initial.py  0002_auto_20220522_0919.py  0003_alter_catalog_options.py  0004_auto_20220522_0927.py  0005_supplier.py  0006_customer.py  0007_alter_catalog_uom_delete_uom.py  0008_alter_catalog_uom.py  0009_customer_customer_tipe.py  0010_customer_created_at_customer_created_by_and_more.py  0011_catalog_merchant_id_customer_merchant_id_and_more.py  0012_catalog_uom_group_id.py  0013_remove_catalog_uom_catalog_uom_inventory_and_more.py  0014_rename_merchant_id_catalog_merchant_and_more.py
merchants/: admin.py  models.py
microweb/: admin.py  apps.py  models.py  views.py
microweb/templates/: home.html
purchase/: admin.py  models.py
sales/: admin.py  models.py
setting_uom/: admin.py  apps.py  models.py
templates/: base.html  judul.html
vehicle/: admin.py  models.py
vehicles/: admin.py  apps.py  models.py
(+33 files in other folders)
